--- a/style.css
+++ b/style.css
@@ -22,28 +22,31 @@ header {
   color: hsl(206, 17%, 28%);
   font-size: 20px;
   margin: 20px auto;
-  max-width: 800px;
+  /* max-width: 800px; */
   padding: 30px 30px 30px 30px;
   display: inline-flex;
   height: 40rem;
+  /* width: fit-content; */
 }
-#card-container {
+.card-container {
     text-align: right;
     padding: 10px;
     margin: 2rem;
     position: relative;
+    width: fit-content;
 }
 .card-title {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 25px;
     text-align: center;
+    width: fit-content;
 }
 #currentConditions {
     padding: 10px; 
     margin: 0 auto; 
     text-align: center; 
     width: fit-content; 
-    background-color: #f0f0f0;
+    background-color: antiquewhite;
 
 }
 #searchBox {
